CMAKE_MINIMUM_REQUIRED(VERSION 3.8)
PROJECT(HTTP_SERVER)
INCLUDE_DIRECTORIES(http_conn/include)
INCLUDE_DIRECTORIES(locker/include/)
INCLUDE_DIRECTORIES(threadPool/include/)
INCLUDE_DIRECTORIES(timer/include/)
INCLUDE_DIRECTORIES(redis/include/)

SET(SRC_LIST main.cpp threadPool/threadpool.cpp http_conn/http_conn.cpp redis/mredis.cpp)
ADD_EXECUTABLE(http ${SRC_LIST})
